# Typetest

./: .editorconfig  CMakeLists.txt  Makefile  README.md  debug.sh
App/: CMakeLists.txt
App/Source/: main.c
App/Source/assets/: samples.c  samples.h
App/Source/core/: text_entry.h
App/Source/states/: id.h  menu.c  menu.h  score.c  score.h  typing.c  typing.h
Core/: CMakeLists.txt
Core/Source/Core/: game_state.c  game_state.h
Core/Source/Core/common/: definitions.h
Core/Source/Core/constants/: frames.c  frames.h  key_codes.h
Core/Source/Core/manager/: game_manager.c  game_manager.h
Core/Source/Core/screen/: game_screen_pool.c  game_screen_pool.h
Core/Source/Core/ui/: color.h  cursor.c  cursor.h  window.c  window.h
Core/Source/Core/utils/: clock.c  error.c  error.h  my_math.c  my_math.h  my_string.c  my_string.h  point.h  stack_char.c  stack_char.h
src/: error.c  error.h  main.c  my_string.c  my_string.h  samples.c  samples.h  text_entry.c  text_entry.h  window.c  window.h
src/assets/: samples.h
src/constants/: frames.c
src/core/: game_state.c  game_state.h  text_entry.c  text_entry.h
src/states/: menu.c  menu.h  score.c  score.h  typing.c  typing.h
src/ui/: color.h  cursor.c  cursor.h  window.c  window.h
src/utils/: clock.c  clock.h  error.c  my_math.c  my_string.c  my_string.h  stack_char.c  stack_char.h
